src/test/ui/rfc-2632-const-trait-impl/const-default-method-bodies.stderr
error[E0599]: no method named `a` found for struct `NonConstImpl` in the current scope
  --> $DIR/const-default-method-bodies.rs:24:18
   |
LL | struct NonConstImpl;
   | -------------------- method `a` not found for this
...
LL |     NonConstImpl.a();
   |                  ^ method not found in `NonConstImpl`
   |
   = help: items from traits can only be used if the trait is implemented and in scope
note: `ConstDefaultFn` defines an item `a`, perhaps you need to implement it
  --> $DIR/const-default-method-bodies.rs:4:1
   |
LL | trait ConstDefaultFn: Sized {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
